<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    android:weightSum="5">
    <TextView
        android:id="@+id/back_phone"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_register"
        android:textSize="18sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="#3DC6FE"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:weightSum="3">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/splash_logo"
            android:layout_weight="1.5"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="22sp"
        android:textColor="@drawable/doc_gray"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"></LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:weightSum="4.0"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <EditText
            android:textCursorDrawable="@color/chat_base_color_text_black"
            android:id="@+id/input_verifiedcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="14sp"
            android:singleLine="true"
            android:ems="10"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/blue_corners"
            android:hint="@string/input_verifiedcode"
            android:textColorHint="@color/white"
            android:layout_weight="2.5"
            >
        </EditText>
        <Button
            android:id="@+id/get_code_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/send_verify_sns"
            android:layout_weight="1.5"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:background="@drawable/grey_corners_3dp"
            android:gravity="center"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.2"></LinearLayout>
    <Button
        android:id="@+id/verify_code_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/blue_corners"
        android:layout_weight="0.5"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/verify_code"
        android:gravity="center"/>

</LinearLayout>