<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:padding="20dp"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <TextView
            android:id="@+id/back_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_register"
            android:textSize="22sp"
            android:textColor="@drawable/doc_blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:weightSum="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/splash_logo"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@drawable/doc_gray"/>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="0dp"
android:padding="5dp"
android:layout_weight="0.2">
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="0.5">
        <EditText
            android:textCursorDrawable="@color/chat_base_color_text_black"
            android:id="@+id/modify_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="14sp"
            android:singleLine="true"
            android:ems="10"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/blue_corners"
            android:hint="@string/forget_password_hint"
            android:textColorHint="@color/white"
            android:layout_weight="2.5"
            >
        </EditText>
        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/reset_get_code_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:layout_weight="1.5"
            android:textColor="@color/white"
            android:background="@drawable/grey_corners_3dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="0.5">
    <EditText
        android:textCursorDrawable="@color/chat_base_color_text_black"
        android:id="@+id/modify_new_pwd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="14sp"
        android:singleLine="true"
        android:ems="10"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/blue_corners"
        android:hint="@string/forget_password_password_hint"
        android:textColorHint="@color/white"
        android:layout_weight="2.5"
        >
    </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="0.5">
        <EditText
            android:textCursorDrawable="@color/chat_base_color_text_black"
            android:id="@+id/modify_authcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="14sp"
            android:singleLine="true"
            android:ems="10"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/blue_corners"
            android:hint="@string/forget_password_verifycode_hint"
            android:textColorHint="@color/white"
            android:layout_weight="2.5"
            >
        </EditText>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/modify_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_corners"
            android:gravity="center"
            android:text="@string/click_to_send_sns"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
        </LinearLayout>


</LinearLayout>