<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:padding="20dp"
    android:id="@+id/login_activity"
    tools:context=".loginActivity"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.5"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/splash_logo"
        android:layout_weight="2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@drawable/doc_gray"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/blue_corners">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/user_name"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ems="10"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:inputType="number"
            android:background="@null"
            android:layout_gravity="center"
            ></EditText>
        </LinearLayout>
        <View
            android:id="@+id/login_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/user_password"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:background="@null"
                android:layout_gravity="center"
                ></EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/blue_corners"
        android:gravity="center"
        android:text="@string/login_button_login"
        android:textColor="@android:color/white"
        android:textSize="17sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/register_button"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@drawable/doc_blue"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:weightSum="4.0"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:background="@mipmap/quicklogin_line"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:text="@string/quick_login"
                android:layout_weight="1.0"
                android:textSize="12sp"
                android:textColor="@drawable/doc_gray"
                android:gravity="center"

                />
            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:background="@mipmap/quicklogin_line"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_gravity="center"
            >
            <ImageView
                android:id="@+id/wx_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/wechat"
                android:gravity="center_horizontal"
                />
            <ImageView
                android:id="@+id/qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/qq"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/forget_password"
            android:textSize="14sp"
            android:textColor="@drawable/doc_gray"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>