<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="7"
        android:id="@+id/top_bar"
        android:background="@drawable/doc_blue">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back_comment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/chat_common_base_header_back_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tobbar_script"
                android:visibility="visible"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/comment"
                android:textSize="22sp"
                android:textColor="@color/white"/></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
           </LinearLayout>
    </LinearLayout>
    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/rate_content"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:ems="10"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:gravity="left|top"
        android:minLines="6"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:textColor="#000000"
        android:hint="@string/input_your_feedback"
        android:background="@drawable/rate_corners"
        android:paddingBottom="20sp"
        >
    </EditText>
    <RatingBar
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:isIndicator="false"
        style="@style/Base.Widget.AppCompat.RatingBar"
        android:stepSize="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ratingbarId"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        >
    </RatingBar>
    <Button
        android:id="@+id/post_feedback_button"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners"
        android:textSize="22sp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:text="@string/post_feedback" />
    <!-- 提示 -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/feedback_attetion"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:weightSum="4.0"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:background="@mipmap/quicklogin_line"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/pay_attetion"
            android:layout_weight="1.0"
            android:textSize="12sp"
            android:textColor="@drawable/doc_gray"
            android:gravity="center_horizontal"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:background="@mipmap/quicklogin_line"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_tip_1"
        android:textSize="12sp"
        android:paddingLeft="12sp"
        android:paddingRight="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_tip_2"
        android:textSize="12sp"
        android:paddingLeft="12sp"
        android:paddingRight="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
</LinearLayout>